Many changes for Masters

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -54,6 +54,20 @@
   <gcse:searchbox-only></gcse:searchbox-only>
 </div>
 
+<div class="study-abroad">
+  <p style="padding: 0; margin: 0.25em 0 0 0; line-height: 1; text-align: center;">
+    <strong>留学関連の記事</strong>
+  </p>
+  <hr />
+  <ul style="padding: 0 10px 0 10px;">
+    <li>
+      <a href="https://gucci-j.github.io/study-abroad/">大学院留学について</a>
+    </li>
+    <li>
+      <a href="https://gucci-j.github.io/study-abroad/crowd-funding">クラウドファンディングのお願い</a>
+    </li>
+  </ul>
+</div>
 
 <div class="recent-posts">
   <p style="padding: 0; margin: 0.25em 0 0 0; line-height: 1; text-align: center;">
