--- a/css/page.scss
+++ b/css/page.scss
@@ -42,6 +42,19 @@
     table tr:nth-child(even){
         background-color: rgb(248, 248, 248)
     }
+
+    blockquote {
+        /* 引用部　*/
+        border-left: 2px solid $gray;
+        padding: 0 1em;
+        color: $gray;
+        font-size: 15px;
+        font-style: italic;
+    
+        @include mobile {
+          font-size: 13px;
+        }
+      }
 }
   
 .page_en { 
