--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,6 +19,7 @@ $background: #e0efff;
 $helvetica: Helvetica, Arial, 'Noto Sans Japanese', "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "游ゴシック", "Yu Gothic", YuGothic, "ＭＳ ゴシック", sans-serif;
 $georgia: Georgia, serif;
+$arial: Arial, Helvetica, sans-serif;
 $yugothic:'Noto Sans Japanese', "游ゴシック", "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, "ＭＳ ゴシック", sans-serif;
 
 // Mobile breakpoints
