--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,6 +4,8 @@
 
 // Colors
 $blue: #4183C4;
+$logo: #60E4E4;
+$backgroundBlue: #E0EFFE;
 
 // Grays
 $black: #000;
@@ -13,7 +15,6 @@ $gray: #666;
 $lightGray: #eee;
 $white: #fff;
 $background: #e0efff;
-//$background: #eceef1;
 
 // Font stacks
 $helvetica: Helvetica, Arial, 'Noto Sans Japanese', "游ゴシック", "Yu Gothic", YuGothic, sans-serif;
