--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
   </div>
   <p style="margin-top: 0.5em; margin-bottom: 0; font-size: 0.8em; text-align: center;">
     自然言語処理や機械学習に関連する情報を発信しています。
-    留学系の話題も<a href="https://note.mu/_gucciiiii">note</a>に書いています。
+    留学系の話題も<a href="https://note.com/_gucciiiii">note</a>に書いています。
   </p>
   <hr />
   <div class="profile_icon">
@@ -64,7 +64,7 @@
       <a href="https://gucci-j.github.io/study-abroad/">大学院留学について</a>
     </li>
     <li>
-      <a href="https://gucci-j.github.io/study-abroad/crowd-funding">クラウドファンディングのお願い</a>
+      <a href="https://gucci-j.github.io/study-abroad/crowd-funding/">クラウドファンディングのお願い</a>
     </li>
   </ul>
 </div>
