Update study-abroad pages

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -61,10 +61,10 @@
   <hr />
   <ul style="padding: 0 10px 0 10px;">
     <li>
-      <a href="https://gucci-j.github.io/study-abroad/">大学院留学について</a>
+      <a href="{{ site.baseurl }}/study-abroad/">大学院留学について</a>
     </li>
     <li>
-      <a href="https://gucci-j.github.io/study-abroad/crowd-funding/">クラウドファンディングのお願い</a>
+      <a href="{{ site.baseurl }}/study-abroad/crowd-funding/">クラウドファンディングのお願い</a>
     </li>
   </ul>
 </div>
