--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -29,7 +29,7 @@
   </div>
 </div>
 
-<div class="amazon-button">
+<!--<div class="amazon-button">
   <p style="margin-top: 0; margin-bottom: 0.5em; font-size: 0.8em; text-align: center;">
     <strong>Amazon.co.jpで買って応援！</strong>
   </p>
@@ -37,7 +37,7 @@
     <a href="//af.moshimo.com/af/c/click?a_id=1430714&p_id=170&pc_id=185&pl_id=10340&guid=ON" target="_blank" rel="nofollow"><img src="//image.moshimo.com/af-img/0068/000000010340.gif" width="300" height="50" style="border:none; padding-bottom: 0;"></a>
     <img src="//i.moshimo.com/af/i/impression?a_id=1430714&p_id=170&pc_id=185&pl_id=10340" width="0" height="0" style="display: none; border:none;">
   </div>
-</div>
+</div>-->
 
 <div class="search">
   <script>
